force-app/main/default/objects/Credit_Risk_Calculation_Request__e/Credit_Risk_Calculation_Request__e.object-meta.xml
<CustomObject>
    <label>Credit Risk Calculation Request</label>
    <pluralLabel>Credit Risk Calculation Requests</pluralLabel>
</CustomObject>