force-app/main/default/objects/Credit_Risk_Calculation_Request__e/fields/Callback_Url__c.field-meta.xml
<CustomField>
    <fullName>Callback_Url__c</fullName>
    <description>URL endpoint to send the credit decision response back to</description>
    <label>Callback URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>