force-app/main/default/objects/Credit_Risk_Calculation_Request__e/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <description>Amount of the loan requesting credit assessment</description>
    <label>Loan Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>