force-app/main/default/objects/Credit_Risk_Calculation_Request__e/fields/Loan_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Id__c</fullName>
    <description>Reference ID for the loan application (used for callback)</description>
    <label>Loan Application ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>