force-app/main/default/objects/Credit_Risk_Calculation_Request__e/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <description>Purpose of the loan for credit assessment</description>
    <label>Loan Purpose</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>