force-app/main/default/objects/Credit_Risk_Calculation_Request__e/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Type of credit risk calculation request (Initial, Recalculation, etc.)</description>
    <label>Request Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>